--- a/hyper link.html
+++ b/hyper link.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
- <h1> menuju file praktikum1 - <a href="praktikum1.html">klik di sini</a></h1>
+ <h1> menuju file praktikum1 - <a href="praktikum1.html">beranda</a></h1>
 <h1> menuju file pratikum2 - <a href="pratikum2.html">klik di sini</a></h1>
 
 </body>
