--- a/tugas.html
+++ b/tugas.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header>
-    <div class="logo">My_Website</div>
+    <div class="logo">MY_WEBSITE</div>
     <nav>
       <ul>
         <li><a href="#beranda">BERANDA</a></li>
@@ -160,7 +160,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2024 m sidiq </p>
+    <p>&copy; 2024 M Sidiq </p>
   </footer>
 
   <script>
