--- a/tugas.html
+++ b/tugas.html
@@ -23,9 +23,14 @@
       </ul>
     </nav>
   </header>
+<div class="tombol">
+  <button onclick="scrollToSection('profil')">profil</button>
+  <button onclick="scrollToSection('FAKTA')">FAKTA</button>
 
+
+</div>
   <section id="beranda">
-    <h2>Selamat Datang di Website Kami</h2>
+    <h2>Selamat Datang Di Website Kami</h2>
     <p>Ini adalah halaman beranda.</p>
   </section>
 
